Added support for Russian language. Contributed by Konstantin Pautina.

--- a/Evolutility/UIServer/UIServer.csproj
+++ b/Evolutility/UIServer/UIServer.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Lang\EvoLang_JP.cs" />
     <Compile Include="Lang\EvoLang_PT.cs" />
     <Compile Include="Lang\EvoLang_RO.cs" />
+    <Compile Include="Lang\EvoLang_RU.cs" />
     <Compile Include="UIServerForms.cs" />
     <Compile Include="UIServerDB.cs" />
     <Compile Include="UIServerCom.cs" />
